--- a/Tabs_N_Blanks/css/grid.css
+++ b/Tabs_N_Blanks/css/grid.css
@@ -110,6 +110,28 @@
 		width: 90%;
 	}
 
+
+
+/*
+	ORDER SUMMARY GRID in product-details.checkout 
+*/
+
+	.grid-col-1of6 {
+		width: 16.667%;
+	}
+
+	.grid-col-2of6 {
+		width: 33.333%;
+	}
+
+	.grid-col-3of6 {
+		width: 50%;
+	}
+
+	.grid-col-4of6 {
+		width: 66.667%;
+	}
+
 	/*
 		Much like last week, we are clearing the floating items so
 		that our 'grid' structure can be stacked on others
